--- a/organizers.html
+++ b/organizers.html
@@ -23,24 +23,24 @@
         <!-- <p class="mb-0" style="color:#5e5d5d;">IEEE VIS 2020, Salt Lake City, Utah <br> <span class="theme-color">25-30 October</span></p> -->
       </div>
       <div class="col-sm-6 text-right">
-        <img id="logo" class="col-sm-6 img-fluid" src="files/logo2.png">
+        <img id="logo" class="col-sm-8 img-fluid" src="files/trexNewLogo.png
       </div>
     </div>
   </div>
 
-  <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-    <!-- <a class="navbar-brand" href="#">News</a> -->
-    <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon "></span>
-    </button>
-    <!-- justify-content-center to collapsibleNavbar -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav nav-fill w-100">
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');">About
-            TREX</a>
-        </li>
-        <!-- <li class="nav-item">
+  <nav class=" navbar navbar-expand-sm navbar-dark sticky-top">
+        <!-- <a class="navbar-brand" href="#">News</a> -->
+        <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon "></span>
+        </button>
+        <!-- justify-content-center to collapsibleNavbar -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav nav-fill w-100">
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');">About
+                TREX</a>
+            </li>
+            <!-- <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span
               style="font-size: 0.6rem;">(NEW)</span></a>
         </li>
@@ -48,111 +48,116 @@
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span
               style="font-size: 0.6rem;">(NEW)</span></a>
         </li> -->
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./call.html');">Call for Papers</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./organizers.html');"><span
-              class="current-nav">Organizers</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./contact.html');">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./call.html');">Call for Papers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./organizers.html');"><span
+                  class="current-nav">Organizers</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./contact.html');">Contact</a>
+            </li>
+          </ul>
+        </div>
+        </nav>
 
-  <div class="container-fluid">
-    <div class="row mb-5">
-      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #becdf4;">
-        <!-- <h2>About Me</h2> -->
-        <h5 class="mb-0">IEEE VIS 2022, Hybrid, USA <br> <span class="theme-color">16-21 October 2022</span></h5>
-        <br>
-        <h4>Important Dates</h4>
-        <div class="row mb-3">
-          <div class="col-sm-12 col-lg-12 col-md-12">
-            <h6>Submission Deadline</h6>
-          </div>
-          <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">Jul 15, 2022, 6 pm PST
-            </h6>
-          </div>
-        </div>
-        <div class="row mb-3">
-          <div class="col-sm-12 col-lg-12 col-md-12">
-            <h6>Author Notification</h6>
-          </div>
-          <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">Aug 12, 2022, 6 pm PST
-            </h6>
-          </div>
-        </div>
-        <div class="row mb-3">
-          <div class="col-sm-12 col-lg-12 col-md-12">
-            <h6>Camera-Ready Deadline</h6>
-          </div>
-          <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"> Aug 22, 2022, 6 pm PST
-            </h6>
-          </div>
-        </div>
-        <div class="row mb-3">
-          <div class="col-sm-12 col-lg-12 col-md-12">
-            <h6>TREX 2022 Workshop</h6>
-          </div>
-          <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">Oct 16 or 17, 2022
-              <!-- <br>12:00 pm - 3:30 pm (US Mountain Time) -->
-            </h6>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-8 col-lg-9 col-md-8 pt-4">
-        <h4 class="col-sm-6 pl-0">Workshop Organizers</h4>
-        <br>
-        <div class="card-columns">
-          <div class="card text-center border-0">
-            <a href="https://mahsan.page" target="_blank"><img class="card-img-top image-org rounded-circle shadow-lg"
-                src="files/Mahsan.jpeg" alt="Card image"></a>
-            <div class="card-body text-center"><a href="https://mahsan.page" target="_blank"><span
-                  style="color:black;">Mahsan Nourani</span></a><br><span class="theme-color">University of
-                Florida</span></div>
-          </div>
-          <div class="card text-center border-0">
-            <a href="https://www.cise.ufl.edu/~eragan/" target="_blank"><img
-                class="card-img-top image-org rounded-circle shadow-lg" src="files/Eric.jpg" alt="Card image"></a>
-            <div class="card-body text-center"><a href="https://www.cise.ufl.edu/~eragan/" target="_blank"><span
-                  style="color:black;">Eric Ragan</span></a><br><span class="theme-color">University of Florida</span>
+        <div class="container-fluid">
+          <div class="row mb-5">
+            <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #becdf4;">
+              <!-- <h2>About Me</h2> -->
+              <h5 class="mb-0">IEEE VIS 2022, Hybrid, USA <br> <span class="theme-color">16-21 October 2022</span></h5>
+              <br>
+              <h4>Important Dates</h4>
+              <div class="row mb-3">
+                <div class="col-sm-12 col-lg-12 col-md-12">
+                  <h6>Submission Deadline</h6>
+                </div>
+                <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
+                  <h6 class="theme-color">Jul 15, 2022, 6 pm PST
+                  </h6>
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col-sm-12 col-lg-12 col-md-12">
+                  <h6>Author Notification</h6>
+                </div>
+                <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
+                  <h6 class="theme-color">Aug 12, 2022, 6 pm PST
+                  </h6>
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col-sm-12 col-lg-12 col-md-12">
+                  <h6>Camera-Ready Deadline</h6>
+                </div>
+                <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
+                  <h6 class="theme-color"> Aug 22, 2022, 6 pm PST
+                  </h6>
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col-sm-12 col-lg-12 col-md-12">
+                  <h6>TREX 2022 Workshop</h6>
+                </div>
+                <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
+                  <h6 class="theme-color">Oct 16 or 17, 2022
+                    <!-- <br>12:00 pm - 3:30 pm (US Mountain Time) -->
+                  </h6>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="card text-center border-0">
-            <a href="https://www.karduni.com/" target="_blank"><img
-                class="card-img-top image-org rounded-circle shadow-lg" src="files/Ali.jpg" alt="Card image">
-              <div class="card-body text-center"><a href="https://www.karduni.com/" target="_blank"><span
-                    style="color:black;">Alireza Karduni</span></a> <br><span class="theme-color"> Northwestern
-                  University</span></div>
-          </div>
-        </div>
-        <div class="card-columns">
-          <div class="card text-center border-0">
-            <a href="https://cyxiong.com/" target="_blank"><img class="card-img-top image-org rounded-circle shadow-lg"
-                src="files/Cindy.jpg" alt="Card image"></a>
-            <div class="card-body text-center"><a href="https://cyxiong.com/" target="_blank"><span
-                  style="color:black;">Cindy Xiong</span></a> <br><span class="theme-color">University of Massachusetts
-                Amherst</span></div>
-          </div>
-          <div class="card text-center border-0">
-            <a href="https://www.linkedin.com/in/alwayslearning/" target="_blank"><img
-                class="card-img-top image-org rounded-circle shadow-lg" src="files/Britt.png" alt="Card image"></a>
-            <div class="card-body text-center"><a href="https://www.linkedin.com/in/alwayslearning/"
-                target="_blank"><span style="color:black;">Brittany Davis</span></a> <br><span
-                class="theme-color">Pacific Northwest National Lab</span></div>
-          </div>
-        </div>
-        <h4 class="col-sm-6 pl-0">Program Committee</h4>
-        TBD
-        <!-- <ul class="list-group list-group-flush">
+
+            <div class="col-sm-8 col-lg-9 col-md-8 pt-4">
+              <h4 class="col-sm-6 pl-0">Workshop Organizers</h4>
+              <br>
+              <div class="card-columns">
+                <div class="card text-center border-0">
+                  <a href="https://mahsan.page" target="_blank"><img
+                      class="card-img-top image-org rounded-circle shadow-lg" src="files/Mahsan.jpeg"
+                      alt="Card image"></a>
+                  <div class="card-body text-center"><a href="https://mahsan.page" target="_blank"><span
+                        style="color:black;">Mahsan Nourani</span></a><br><span class="theme-color">University of
+                      Florida</span></div>
+                </div>
+                <div class="card text-center border-0">
+                  <a href="https://www.cise.ufl.edu/~eragan/" target="_blank"><img
+                      class="card-img-top image-org rounded-circle shadow-lg" src="files/Eric.jpg" alt="Card image"></a>
+                  <div class="card-body text-center"><a href="https://www.cise.ufl.edu/~eragan/" target="_blank"><span
+                        style="color:black;">Eric Ragan</span></a><br><span class="theme-color">University of
+                      Florida</span>
+                  </div>
+                </div>
+                <div class="card text-center border-0">
+                  <a href="https://www.karduni.com/" target="_blank"><img
+                      class="card-img-top image-org rounded-circle shadow-lg" src="files/Ali.jpg" alt="Card image">
+                    <div class="card-body text-center"><a href="https://www.karduni.com/" target="_blank"><span
+                          style="color:black;">Alireza Karduni</span></a> <br><span class="theme-color"> Northwestern
+                        University</span></div>
+                </div>
+              </div>
+              <div class="card-columns">
+                <div class="card text-center border-0">
+                  <a href="https://cyxiong.com/" target="_blank"><img
+                      class="card-img-top image-org rounded-circle shadow-lg" src="files/Cindy.jpg"
+                      alt="Card image"></a>
+                  <div class="card-body text-center"><a href="https://cyxiong.com/" target="_blank"><span
+                        style="color:black;">Cindy Xiong</span></a> <br><span class="theme-color">University of
+                      Massachusetts
+                      Amherst</span></div>
+                </div>
+                <div class="card text-center border-0">
+                  <a href="https://www.linkedin.com/in/alwayslearning/" target="_blank"><img
+                      class="card-img-top image-org rounded-circle shadow-lg" src="files/Britt.png"
+                      alt="Card image"></a>
+                  <div class="card-body text-center"><a href="https://www.linkedin.com/in/alwayslearning/"
+                      target="_blank"><span style="color:black;">Brittany Davis</span></a> <br><span
+                      class="theme-color">Pacific Northwest National Lab</span></div>
+                </div>
+              </div>
+              <h4 class="col-sm-6 pl-0">Program Committee</h4>
+              TBD
+              <!-- <ul class="list-group list-group-flush">
           <li class="list-group-item pm-content"><a href="https://jgoodall.me/" class="pm-text">John Goodall </a> -
             <span style="font-size: small; font-width: bold"><i>Oak Ridge National Laboratory</i></span>
           </li>
@@ -167,28 +172,30 @@
               Harrison </a> - <span style="font-size: small; font-width: bold"><i>Rochester Institute of
                 Technology</i></span></li>
         </ul> -->
-      </div>
-    </div>
+            </div>
+          </div>
 
-    <hr>
-    <div class="row text-center mb-1">
-      <div class="col-sm-12">
-        <i class="text-center" style="color: #5e5d5d; font-size: 0.7rem;"> Copyright <i class="far fa-copyright"></i>
-          <script>document.write(new Date().getUTCFullYear());</script> TREX 2022: Third Workshop on Trust and Expertise
-          In
-          Visualization. All Rights Reserved.
-        </i>
-        <!-- <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
+          <hr>
+          <div class="row text-center mb-1">
+            <div class="col-sm-12">
+              <i class="text-center" style="color: #5e5d5d; font-size: 0.7rem;"> Copyright <i
+                  class="far fa-copyright"></i>
+                <script>document.write(new Date().getUTCFullYear());</script> TREX 2022: Third Workshop on Trust and
+                Expertise
+                In
+                Visualization. All Rights Reserved.
+              </i>
+              <!-- <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
             href="https://www.freepik.com/free-photos-vectors/background">freepik.com</a>. Copyright belongs to freepik
           and art creators. </i> -->
-      </div>
-    </div>
+            </div>
+          </div>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+          <script src="js/main.js"></script>
 </body>
 
 </html>
