--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <!-- <p class="mb-0" style="color:#5e5d5d;">IEEE VIS 2020, Salt Lake City, Utah <br> <span class="theme-color">25-30 October</span></p> -->
       </div>
       <div class="col-sm-6 text-right">
-        <img id="logo" class="col-sm-6 img-fluid" src="files/logo2.png">
+        <img id="logo" class="col-sm-8 img-fluid" src="files/trexNewLogo.png">
       </div>
     </div>
   </div>
