--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav nav-fill w-100">
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');"><span class="current-nav">About
-              TREX</span></a>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');">About
+            TREX</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span
@@ -55,7 +55,8 @@
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./organizers.html');">Organizers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./contact.html');">Contact</a>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./contact.html');"><span
+              class="current-nav">Contact</span></a>
         </li>
       </ul>
     </div>
@@ -73,7 +74,7 @@
             <h6>Submission Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">Jul 15, 2022, 6 pm PST
+            <h6 class="theme-color">Jul 16, 2022, 6 pm PST
             </h6>
           </div>
         </div>
