updated the dates

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h6>Submission Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">Jul 16, 2022, 6 pm PST
+            <h6 class="theme-color"><strike>Jul 16, 2022, 6 pm PST</strike> <br> <b>Jul 22, 2022, 11:53 pm PST</b>
             </h6>
           </div>
         </div>
@@ -82,7 +82,7 @@
             <h6>Author Notification</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">Aug 12, 2022, 6 pm PST
+            <h6 class="theme-color"><strike>Aug 12, 2022, 6 pm PST</strike> <br> <b>Aug 17, 2022, 11:53 pm PST</b>
             </h6>
           </div>
         </div>
@@ -100,7 +100,7 @@
             <h6>TREX 2022 Workshop</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">Oct 16 or 17, 2022
+            <h6 class="theme-color">Oct 16, 2022
               <!-- <br>12:00 pm - 3:30 pm (US Mountain Time) -->
             </h6>
           </div>
