--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');"><span class="current-nav">About
               TREX</span></a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span
               style="font-size: 0.6rem;">(NEW)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span
               style="font-size: 0.6rem;">(NEW)</span></a>
-        </li> -->
+        </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./call.html');">Call for Papers</a>
         </li>
@@ -100,7 +100,7 @@
             <h6>TREX 2022 Workshop</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">Oct 16, 2022
+            <h6 class="theme-color">Oct 16, 2022, 9 am - 12 pm CST
               <!-- <br>12:00 pm - 3:30 pm (US Mountain Time) -->
             </h6>
           </div>
@@ -112,20 +112,31 @@
           <!-- NEWS and Updates -->
           <!-- <div class="alert p-2" style="background-color:#eaeaea;">
       <b class="theme-color">NEW!</b> TREX will be streamed on YouTube through this link: <a class="theme-color" href="https://youtu.be/LTGzCvhv05M">https://youtu.be/LTGzCvhv05M</a> with live Q&A open to the audience!
+    </div> -->
+    <!-- <div class="alert p-2" style="background-color:#eaeaea;">
+      <b class="theme-color">NEW!</b> TREX will be hybrid this year, taking place on Sunday, October 16 2022 - 9:00 am to 12:00 pm (US Central Time) both virtually and in-person in Oklahoma City. Join us for a morning of presentations and discussions. The workshop schedule is now <a class="theme-color" href="papers.html">available here!</a>
     </div>
     <div class="alert p-2" style="background-color:#eaeaea;">
-      <b class="theme-color">NEW!</b> TREX will take place virtually on Sunday, October 25 2020 - 12:00 pm to 3:30 pm (US Mountain Time). The workshop schedule is now <a class="theme-color" href="papers.html">available here!</a>
-    </div>
-    <div class="alert p-2" style="background-color:#eaeaea;">
-      <b class="theme-color">NEW!</b> We are pleased to announce <i>Steven Franconeri</i>, <i>Jenn Wortman Vaughan</i>, and <i>Bum Chul Kwon</i> will join TREX as invited speakers. More information about the talks and speakers are <a class="theme-color" href="speakers.html">available here!</a>
+      <b class="theme-color">NEW!</b> We are pleased to announce <i>Dr. Doug Markant</i> will be this year's keynote speaker at TREX. More information about Dr. Markant's talk is <a class="theme-color" href="speakers.html">available here!</a>
     </div>  -->
           <div class="col-md-6 col-lg-8">
             <div class="alert p-2" style="background-color:#eaf0ff;">
               <!-- <b class="theme-color">NEW!</b> -->
+              <b class="theme-color">NEW!</b> TREX will be hybrid this year, taking place on Sunday, October 16 2022 - 9:00 am to 12:00 pm (US Central Time) both virtually and in-person in Omni Hotel (<b>Oklahoma Station 8</b>). Join us for a morning of presentations and discussions. The workshop program is now <a class="theme-color" href="papers.html">available here!</a>
+            </div>
+            <div class="alert p-2" style="background-color:#eaf0ff;">
+              <!-- <b class="theme-color">NEW!</b> -->
+              <b class="theme-color">NEW!</b> For the first time, TREX will have breakout discussions (hybrid) where the attendees can meet and discuss the challenges they face in their work related to TREX-topics. More info is <a class="theme-color" href="papers.html">available here!</a>
+            </div>
+            <div class="alert p-2" style="background-color:#eaf0ff;">
+              <!-- <b class="theme-color">NEW!</b> -->
+              <b class="theme-color">NEW!</b> We are pleased to announce <i>Dr. Doug Markant</i> will be this year's keynote speaker at TREX. More information about Dr. Markant's talk is <a class="theme-color" href="speakers.html">available here!</a>
+            </div>
+            <!-- <div class="alert p-2" style="background-color:#eaf0ff;">
               TREX will follow and comply with IEEE VIS conference format. Currently, VIS 2022 is to set as a hybrid
               conference, with planned attendance from Oklahoma City, USA. Please refer to the <a
                 href="http://ieeevis.org">IEEE VIS Website</a> to monitor the conference official updates.
-            </div>
+            </div> -->
             <h5 class="theme-color">Welcome to TREX 2022!</h5>
             <p>This is a third-time workshop that is happening in conjunction with the <a href="http://ieeevis.org">IEEE
                 Visualization Conference</a>, scheduled to take place in Oklahoma City, USA in October 2022.
@@ -147,7 +158,7 @@
           </div>
           <!-- <div class="col-md-4 col-lg-4 text-center mb-3 p-0"><img class="img-fluid col-md-11 col-lg-6" src="files/new-orleans-hero.jpg"></div> -->
           <div class="col-md-6 col-lg-4">
-            <a class="twitter-timeline" data-width="300" data-theme="dark" data-height="300"
+            <a class="twitter-timeline" data-width="300" data-theme="dark" data-height="600"
               href="https://twitter.com/TrexInVIS?ref_src=twsrc%5Etfw">Tweets by @TrexInVIS</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
