--- a/speakers.html
+++ b/speakers.html
@@ -17,16 +17,17 @@
   <div class="jumbotron jumbotron-fluid pr-2 pl-2 pb-0 top-panel">
     <div class="row container-fluid justify-content-center align-items-center">
       <div class="col-sm-6">
-        <h1 class="mb-0" style="color:#5e5d5d;"> <span class="theme-color">TREX</span> 2021: <br> Workshop on <span
-            class="theme-color">TR</span>ust and <span2 class="theme-color">EX</span2>pertise <br> in Visual Analytics
+        <h1 class="mb-0" style="color:#1d3060;"> <span class="theme-color">TREX</span> 2022: <br> Workshop on <span
+            class="theme-color">TR</span>ust and <span2 class="theme-color">EX</span2>pertise in Visualization
         </h1>
         <!-- <p class="mb-0" style="color:#5e5d5d;">IEEE VIS 2020, Salt Lake City, Utah <br> <span class="theme-color">25-30 October</span></p> -->
       </div>
       <div class="col-sm-6 text-right">
-        <img id="logo" class="col-sm-6 img-fluid" src="files/logo2.png">
+        <img id="logo" class="col-sm-8 img-fluid" src="files/trexNewLogo.png" />
       </div>
     </div>
   </div>
+
 
   <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
     <!-- <a class="navbar-brand" href="#">News</a> -->
@@ -41,7 +42,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');"><span
-              class="current-nav">Invited Speakers</span> <span style="font-size: 0.6rem;">(NEW)</span></a>
+              class="current-nav">Keynote Speaker</span> <span style="font-size: 0.6rem;">(NEW)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span
@@ -62,9 +63,9 @@
 
   <div class="container-fluid">
     <div class="row mb-5">
-      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #ffe28a;">
+      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #becdf4;">
         <!-- <h2>About Me</h2> -->
-        <h5 class="mb-0">IEEE VIS 2021, New Orleans, USA <br> <span class="theme-color">24-29 October 2021</span></h5>
+        <h5 class="mb-0">IEEE VIS 2022, Hybrid, USA <br> <span class="theme-color">16-21 October 2022</span></h5>
         <br>
         <h4>Important Dates</h4>
         <div class="row mb-3">
@@ -72,7 +73,7 @@
             <h6>Submission Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"><strike style="color: #770e81;">Jul 30, 2021</strike> <b>Aug 6, 2021, 6 pm PST</b>
+            <h6 class="theme-color"><strike>Jul 16, 2022, 6 pm PST</strike> <br> <b>Jul 22, 2022, 11:53 pm PST</b>
             </h6>
           </div>
         </div>
@@ -81,7 +82,7 @@
             <h6>Author Notification</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"><strike style="color: #770e81;">Sep 3, 2021</strike> <b>Sep 10, 2021, 6 pm PST</b>
+            <h6 class="theme-color"><strike>Aug 12, 2022, 6 pm PST</strike> <br> <b>Aug 17, 2022, 11:53 pm PST</b>
             </h6>
           </div>
         </div>
@@ -90,16 +91,16 @@
             <h6>Camera-Ready Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">  <b>Sep 17, 2021, AoE</b>
+            <h6 class="theme-color"> Aug 22, 2022, 6 pm PST
             </h6>
           </div>
         </div>
         <div class="row mb-3">
           <div class="col-sm-12 col-lg-12 col-md-12">
-            <h6>TREX 2021 Workshop</h6>
+            <h6>TREX 2022 Workshop</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">October 24, 8-11:30 am Central Time
+            <h6 class="theme-color">Oct 16, 2022, 9 am - 12 pm CST
               <!-- <br>12:00 pm - 3:30 pm (US Mountain Time) -->
             </h6>
           </div>
@@ -110,15 +111,15 @@
         <h4>Keynote Speaker <span class="theme-color" style="font-size: 1.1rem;">(NEW)</span></h4>
         <br>
         <div class="media">
-          <img src="files/Vera.jpg" class="align-self-start mr-3" style="width:150px">
+          <img src="files/Doug.jpeg" class="align-self-start mr-3" style="width:150px">
           <div class="media-body invited-talk">
-            <h4>Human-Centered Explainable AI (HCXAI): From Algorithms to User Experiences</h4>
+            <h4>When does the data “speak for itself”? Toward formal models of persuasive data visualizatio</h4>
             <h5><a class="theme-color"
-                href="http://www.qveraliao.com/">Dr. Q. Vera Liao</a> <span style="font-size: 15px; color: #5e5d5d;">- Microsoft Research</span></h5>
-            <p> <b>Abstract:</b> As a technical sub-field of artificial intelligence (AI), explainable AI (XAI) has produced a vast collection of algorithms in recent years. However, explainability is an inherently human-centric property and the field is starting to embrace human-centered approaches. HCI research and UX design in this area are increasingly important especially as practitioners begin to leverage XAI algorithms to build XAI applications. In this talk, I will draw on our own research and broad HCI work to highlight the central role that human-centered approaches should play in shaping XAI technologies, including to drive technical choices by understanding user needs, to uncover pitfalls of existing XAI methods, and to provide conceptual frameworks for human-compatible XAI.
+                href="http://www.qveraliao.com/">Dr. Doug Markant</a> <span style="font-size: 15px; color: #5e5d5d;">- University of North Carolina at Charlotte</span></h5>
+            <p> <b>Abstract:</b> When are data visualizations persuasive, leading to changes in beliefs, attitudes, or behavior? The COVID-19 pandemic has starkly illustrated how visualizations can be powerful drivers of behavior change for some people, while having less impact for others when the data contradicts existing views or comes from untrusted sources. While there is broad recognition that perceptual, cognitive, and motivational processes affect how people interpret data visualizations, it is difficult to predict how the interplay of these factors determines whether visualizations prompt belief change and broader shifts in attitudes. In this talk I will argue that formal models of belief change provide a valuable quantitative framework for investigating how people make sense of and learn from data visualizations. I will describe recent work using Bayesian cognitive modeling to examine how people learn about statistical relationships (e.g., the correlation between mask-wearing and COVID infection rates) when interacting with data visualizations with different representations of statistical uncertainty. This modeling framework provides precise, testable predictions for how people should update their beliefs when interacting with data while accounting for perceptual biases, prior experience, and beliefs about the data-generating process. Finally, I will discuss potential insights from this approach and related work in cognitive science for the design and evaluation of persuasive data visualizations.
             </p>
             <br>
-            <p><b>Bio:</b> Q. Vera Liao is a Principal Researcher at Microsoft Research Montreal. Her current interest is in human-AI interaction and explainable AI, with a focus on bridging state-of-the-art AI technologies and user-centered design practices. She serves as the Co-Editor-in-Chief for Springer HCI Series, and on the Editorial Board of IJHCS and ACM TiiS. Before joining MSR, she worked at IBM T.J. Watson Research Center.</p>
+            <p><b>Bio:</b> Doug Markant is a cognitive scientist who examines human learning, memory, and decision making through behavioral experiments and computational modeling. He obtained his Ph.D. in Psychology from New York University in 2014, after which he was a postdoctoral researcher at the Max Planck Institute for Human Development in Berlin in the Center for Adaptive Rationality. He is currently an Assistant Professor in the Dept of Psychological Science at UNC Charlotte, where he is a core faculty member of the Health Psychology Ph.D. program and an affiliate of the Ribarsky Center for Visual Analytics. He also serves as the director of the interdisciplinary program in Cognitive Science.</p>
           </div>
         </div>
       </div>
