--- a/call.html
+++ b/call.html
@@ -40,14 +40,14 @@
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');">About
             TREX</a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span
               style="font-size: 0.6rem;">(NEW)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span
               style="font-size: 0.6rem;">(NEW)</span></a>
-        </li> -->
+        </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./call.html');"><span class="current-nav">Call
               for Papers</span></a>
@@ -101,7 +101,7 @@
             <h6>TREX 2022 Workshop</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">Oct 16, 2022
+            <h6 class="theme-color">Oct 16, 2022, 9 am - 12 pm CST
               <!-- <br>12:00 pm - 3:30 pm (US Mountain Time) -->
             </h6>
           </div>
