--- a/papers.html
+++ b/papers.html
@@ -116,7 +116,7 @@
           <br> <b>Hybrid Breakout Session Discussions:</b> For the first time, we are planning a breakout discussion where the attendees would get a chance
           to connect with one another and do a group discussion activity. We will summarize and discuss group findings during the workshop closing. 
           The Zoom links for virtual attendees to join will be announced during the workshop by the organizers. To access the workshop, you must be registered for the conference via <a
-            href="http://ieeevis.org/year/2021/info/registration/conference-registration">IEEE VIS
+            href="https://www.ieeevis.org/year/2022/info/registration/conference-registration">IEEE VIS
             Website</a>.
 
           <br> <b>Schedule:</b> The workshop will take place on <b class="theme-color">Sunday, October 24 from 9:00 am to 12:00 pm (US
